======= 3.4.9

- added HTML escaping for meta tags

======= 3.4.8

- fixed measuring dimension for `.gif` images
- fixed potential remote code execution in `U.set()` founded by [Snyk](https://snyk.io/vuln)

======= 3.4.7

- fixed: command injection in `Image.pipe()` and `Image.stream()`
- fixed `DELETE` method for the schemas (now it works like `PATCH` method)
- fixed: `controller.transfer()`

======= 3.4.6

- added: a support for Total.js v4 UIDs

- updated: file stats
- updated: calculating of `usage`

- fixed: applying of `default_root` in static files
- fixed: routing evaluation
- fixed: parsing of longer WebSocket messages
- fixed: mail error handling
- fixed: `versions` with `default_root`

======= 3.4.5

- fixed: a problem with persistent images

======= 3.4.4

- added: schema options `$.successful(function(response) {})`
- added: `options.reconnectserver {Boolean}`  to `WEBSOCKETCLIENT`
- added: `req.snapshot(callback(err, request_body))`
- added: a new command `CMD('reload_preferences')`
- added: a new FILESTORAGE mechanism based on `UID`
- added: `sql` extension to `U.getContentType()`
- added: `F.stats.performance.usage` which contains percentual usage of the thread

- updated: `SchemaOptions` method `$.response([index/operation_name])`, e.g. `$.response('workflow.NAME')`
- updated: snapshot `startscript.js.json` contains tabs instead of spaces
- updated: `DatabaseBuilder.rule(rule, [param])`, supports string declaration of filter function
- updated: `URL` validation

- fixed: cleaning of NoSQL embedded databases
- fixed: `String.parseCSV()`, now supports multiline strings
- fixed: a bug when closing of websocket
- fixed: `DatabaseBuilder.search()` method
- fixed: `Error` in `CLONE()` method
- fixed: `schema.inherit()` by adding `schema.middleware()` and `schema.verify()`
- fixed: parsing messages in WebSocket
- fixed: a problem in some commands pre-render in the view compiler
- fixed: parsing of query strings

======= 3.4.3
